Fix z-index and position of quick jump; add kbd style

--- a/extension/content.css
+++ b/extension/content.css
@@ -1,5 +1,13 @@
-body {
-  position: relative;
+kbd {
+  display: inline-block;
+  padding: 3px 10px;
+  color: #555;
+  vertical-align: middle;
+  background-color: #fcfcfc;
+  border: solid 1px #ccc;
+  border-bottom-color: #bbb;
+  border-radius: 3px;
+  box-shadow: inset 0 -1px 0 #bbb;
 }
 
 /* quick jump container for selecting projects */
@@ -8,14 +16,16 @@ body {
   border: 1px solid #999;
   display: none;
   font-size: 300%;
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  margin: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 80%;
-  height: 50%;
-  max-width: 600px;
-  max-height: 600px;
+  height: auto;
+  max-width: 800px;
+  max-height: 80%;
   text-align: center;
+  z-index: 999999;
 }
 
 #quick-jump-container.show {
